--- a/HTML/Site RLens/a-propos.html
+++ b/HTML/Site RLens/a-propos.html
@@ -23,7 +23,7 @@
                 <div>
                     <a href="index.html"> Accueil</a>
                     <a href="a-propos.html">À propos</a>
-                    <a href="portefolio.html">Portfolio</a>
+                    <a href="portfolio.html">Portfolio</a>
                 </div>
         </nav>
     </header>
