--- a/HTML/Site RLens/index.html
+++ b/HTML/Site RLens/index.html
@@ -19,7 +19,7 @@
             <div class="lienflex">
                 <a href="index.html">Accueil</a>
                 <a href="a-propos.html">À propos</a>
-                <a href="portefolio.html">Portefolio</a>
+                <a href="portfolio.html">Portefolio</a>
             </div>
         </nav>
     </header>
