--- a/HTML/Site RLens/a-propos.html
+++ b/HTML/Site RLens/a-propos.html
@@ -49,7 +49,7 @@
                 </ul>
             </div>
             <div>
-                <a href="portefolio.html" class="cta">VOIR MON PORTFOLIO</a>
+                <a href="portfolio.html" class="cta">VOIR MON PORTFOLIO</a>
             </div>
         </section>
         <section class="section-tarif">
